--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ NODE_ENV=development
 APP_NAME=Fénix
 APP_VERSION=1.0.0
 APP_VERSION_DATE=13-06-2024
-FENIX_BACKEND=http://localhost:3001
+NEXT_PUBLIC_BACKEND_URL=http://localhost:3001
 AUTH_SERVICE=https://auth-test.clinicabonnadona.com
